--- a/public/frontEnd/assets/dest/css/style.css
+++ b/public/frontEnd/assets/dest/css/style.css
@@ -5078,7 +5078,7 @@ transition: all 0.17s ease-in-out;
     -webkit-transition: all 0.17s ease-in-out;
     -o-transition: all 0.17s ease-in-out;
     -webkit-backface-visibility: hidden;}
-.sub-menu{z-index:999;top: 31px;
+.sub-menu{z-index:9999;top: 31px;
 transition: all 0.17s ease-in-out;
     -moz-transition: all 0.17s ease-in-out;
     -webkit-transition: all 0.17s ease-in-out;
@@ -5099,7 +5099,7 @@ box-shadow:         0px 0px 20px 0px rgba(0, 0, 0, 0.12);}
 
 
 
-
+/*----single-item hover----*/
 .single-item-header{position:relative; overflow:hidden;}
 .ribbon{z-index:999;}
 .single-item:hover a.add-to-cart{background: #f90;}
