--- a/public/frontEnd/assets/dest/css/phong-style.css
+++ b/public/frontEnd/assets/dest/css/phong-style.css
@@ -524,3 +524,12 @@ img.imgUserCmt{
 #myBtnScroll:hover {
   background-color: #555;
 }
+/*----------CSS Table History Order--------*/
+.contentAccount .table-historyOrder thead tr th{
+  white-space: nowrap;
+  border: 2px solid #e1e1e1!important;
+}
+.contentAccount .table-historyOrderDetail thead tr th{
+  white-space: nowrap;
+  border: 2px solid #e1e1e1!important;
+}
