--- a/public/frontEnd/assets/dest/css/style.css
+++ b/public/frontEnd/assets/dest/css/style.css
@@ -113,7 +113,7 @@ max-width:100%
 }
 
 textarea:focus,input:focus,select:focus,a:focus {
-outline:none
+outline:none;
 }
 
 h1,h2,h3,h4,h5,h6,td,caption {
@@ -1581,7 +1581,7 @@ cursor:default
 
 .cart-item {
 position:relative;
-padding:20px 0;
+padding-top:20px;
 border-bottom:1px solid #e1e1e1
 }
 
