--- a/public/frontEnd/assets/dest/css/phong-style.css
+++ b/public/frontEnd/assets/dest/css/phong-style.css
@@ -533,3 +533,10 @@ img.imgUserCmt{
   white-space: nowrap;
   border: 2px solid #e1e1e1!important;
 }
+#infoContact{
+  margin-top:10%;
+}
+#infoContact p{
+  padding-left: 15px;
+  padding-top: 5px;
+}
